@@ -11,3 +11,21 @@
 	$lang['list_clear_filtering'] 	= 'Clear filtering';
 	$lang['list_delete'] 			= 'Delete';
 	$lang['list_edit'] 				= 'Edit';	
+
+	$lang['form_edit'] 				= 'Edit';
+	$lang['form_back_to_list'] 		= 'Back to list';
+	$lang['form_update_changes'] 	= 'Update changes';
+	$lang['form_cancel'] 			= 'Cancel';	
+	$lang['form_update_loading'] 	= 'Loading, updating changes...';	
+	$lang['update_success_message'] = 'Your data has been successfully updated.';	
+	$lang['form_go_back_to_list'] 	= 'Go back to list';
+	
+	$lang['form_add'] 				= 'Add';
+	$lang['insert_success_message'] = 'Your data has been successfully stored into the database.';
+	$lang['form_or']				= 'or';
+	$lang['form_save'] 				= 'Save';
+	
+	$lang['delete_success_message'] = 'Your data has been successfully deleted from the database.';
+	
+	$lang['alert_add_form']			= 'The data you had insert may not be saved.\\nAre you sure you want to go back to list?';
+	$lang['alert_edit_form']		= 'The data you had change may not be saved.\\nAre you sure you want to go back to list?';
