@@ -11,4 +11,21 @@
 	$lang['list_clear_filtering'] 	= 'Καθαρισμός φίλτρων';
 	$lang['list_delete'] 			= 'Διαγραφή';
 	$lang['list_edit'] 				= 'Επεξεργασία';
+
+	$lang['form_edit'] 				= 'Επεξεργασία';
+	$lang['form_back_to_list'] 		= 'Επιστροφή στην λίστα';
+	$lang['form_update_changes'] 	= 'Αποθήκευση αλλαγών';
+	$lang['form_cancel'] 			= 'Ακύρωση';
+	$lang['form_update_loading'] 	= 'Αναμονή, αποθήκευση αλλαγών...';
+	$lang['update_success_message'] = 'Η επεξεργασία ολοκληρώθηκε με επιτυχία.';
+	$lang['form_go_back_to_list'] 	= 'Επιστροφή στην λίστα';
+
+	$lang['form_add'] 				= 'Προσθήκη';
+	$lang['insert_success_message'] = 'Τα δεδομένα σας καταχωρήθηκαν στην βάση δεδομένων με επιτυχία.';
+	$lang['form_or']				= 'ή';
+	$lang['form_save'] 				= 'Αποθήκευση';
 	
+	$lang['delete_success_message'] = 'Τα δεδομένα σας διαγράφτηκαν με επιτυχία απο την βάση δεδομένων';	
+	
+	$lang['alert_add_form']			= 'Τα στοιχεία που καταχωρήσατε, πιθανόν να μην έχουν αποθηκευτεί.\\nΕίστε σίγουροι ότι θέλετε να πάτε πίσω στην λίστα?';
+	$lang['alert_edit_form']		= 'Τα στοιχεία που αλλάξατε, πιθανόν να μην έχουν αποθηκευτεί.\\nΕίστε σίγουροι ότι θέλετε να πάτε πίσω στην λίστα?';	
