@@ -46,6 +46,9 @@ $(function(){
 								{
 									alert('An error has been occured at the insert.');
 								}
+							},
+							error: function(){
+								alert('An error has been occured at the insert.');
 							}
 						});
 					}
@@ -72,7 +75,7 @@ $(function(){
 
 	function goToList()
 	{
-		if( confirm('The data you have entered may not be saved. Are you sure you want to go back to list?') )
+		if( confirm( message_alert_add_form ) )
 		{
 			window.location = list_url;
 		}
