@@ -33,6 +33,9 @@ $(function(){
 							{
 								alert('An error occured on Saving');
 							}
+						},
+						error: function(){
+							alert('An error occured on Saving');
 						}
 					});
 				}
@@ -59,7 +62,7 @@ $(function(){
 
 function goToList()
 {
-	if( confirm('The data you have entered may not be saved. Are you sure you want to go back to list?') )
+	if( confirm( message_alert_edit_form ) )
 	{
 		window.location = list_url;
 	}
