@@ -5,6 +5,7 @@ v.1.1.5
 	Adding Timestamp as an automatic date and time field.
 	Change the business logic of adding js and css files. This is really useful for a FUTURE feature with multiple tables in the same view.
 	A temporary solution for the search for All that have a relation_n_n.
+	Small Bug fix - adding tinyint as a type to autogenerate the true_false type (active-inactive) for tinyint at CI 2.1
 	Fixing issue #1 - flexigrid width was always 960px. Now has always 100% width.
 v.1.1.4
 	Bug Fix - When you have unset edit and unset delete in your actions and also you have insert one or more add_action, the column Actions disapeared.
